--- a/myapp/src/container/FeaturePages/VisionBoard/SelectedImageList/style.module.css
+++ b/myapp/src/container/FeaturePages/VisionBoard/SelectedImageList/style.module.css
@@ -122,6 +122,7 @@
     animation-duration: 2s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
+    cursor: pointer;
 }
 .backBtn{
     background: #1479ff;
@@ -151,6 +152,7 @@
     animation-duration: 2s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
+    cursor: pointer;
 }
 @keyframes animate {
     0% {
