--- a/myapp/src/Components/Pages/About/About.module.css
+++ b/myapp/src/Components/Pages/About/About.module.css
@@ -14,7 +14,7 @@
     height: 100vh;
     background: white;
     padding: 80px 45px 0px 45px;
-    overflow:scroll;
+    overflow:auto;
 }
 .backButton{
     width:15%;
