update about.js and TechDiagram modal componenet added

--- a/src/components/Pages/About/About.module.css
+++ b/src/components/Pages/About/About.module.css
@@ -4,20 +4,11 @@
     position: fixed;
     text-align: left;
     display: flex;  
-    background: #f3f8ff !important;
-}
-.sectionOneDiv{
-    width:60%;
-    height: 100vh;
-    background: white;
-    padding: 80px 45px 0px 45px;
-    display: flex;
+    /* background: #f3f8ff !important; */
+    background: #fff !important;
+    padding: 150px;
     flex-direction: column;
     overflow: auto;
-}
-.sectionTwoDiv{
-    width:40%;
-    height: 100vh;  
 }
 .summaryDiv{
     width:100%;
@@ -27,10 +18,20 @@
     color: black !important; 
 }
 .title{
-    font-size: 30px;
+    font-size: 40px;
     font-family: sans-serif ;
     font-weight: 700 !important;
     text-align: center !important;
+}
+.summaryTitle{
+    font-size: 26px;
+    font-family: sans-serif ;
+    font-weight: 600 !important;
+    color:#1E3E6B;
+    z-index:3!important;
+}
+.summaryText{
+    font-size: 20px;
 }
 .featureTitle{
     font-size: 26px;
@@ -38,116 +39,30 @@
     font-weight: 600 !important;
     color:#1E3E6B;
     z-index:3!important;
+    margin-top: 40px;
+    
 }
+/*=============================================================*/
 .MainFeatureDiv{
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     margin: 0px;
 }
-.subfeatureDivOne{
-    display: block;
-    position: relative;
-    margin: 0px;
-}
-.backDivOne{
-    width: 500px;
-    height: 450px;
-    background-color: #1b7cfb1c;
-    border-radius:60px;
-    -ms-transform: skewx(-18dg); /* IE 9 */
-    transform: skewx(-18deg);
-    display: block !important;
-    position: relative !important;
-    top:-450px;
-    left: 460px;
-    z-index:1 !important; 
-}
-.imageOneDiv{ 
-    width: 50%;
-    height: 100%;
-    margin-left: 0px;
-    padding: 20px;
-    z-index:3 !important;
-    -ms-transform: skewx(0dg) !important; /* IE 9 */
-    transform: skewx(0deg) !important;
-    position: relative !important;
-    top:-870px;
-    left: 400px;
-}
-.gifImageOne{
-    width: 550px;
-    height: 350px;
-    border: 1px solid gray;
-    border-radius: 6px !important;
-    z-index:3 !important;
-    -ms-transform: skewx(0dg) !important; /* IE 9 */
-    transform: skewx(0deg) !important;
-   
-}
-.videoOneDesc{
-    width: 450px;
-    z-index:3!important;
-    
-    margin-top: 30px;
-}  
-.backDivTwo{
-    width: 500px;
-    height: 450px;
-    background-color: #1b7cfb1c;
-    border-radius:60px;
-    -ms-transform: skewx(-18dg); /* IE 9 */
-    transform: skewx(-18deg);
-    display: block !important;
-    position: relative !important;
-    top:-750px;
-    left: 50px;
-    z-index:1 !important; 
-}
-.imageTwoDiv{ 
-    width: 50%;
-    height: 100%;
-    margin-left: 0px;
-    padding: 20px;
-    z-index:3 !important;
-    -ms-transform: skewx(0dg) !important; /* IE 9 */
-    transform: skewx(0deg) !important;
-    position: relative !important;
-    top:-1170px;
-    left: 0px;
-}
-.gifImageTwo{
-    width: 550px;
-    height: 350px;
-    border: 1px solid gray;
-    border-radius: 6px !important;
-    z-index:3 !important;
-    -ms-transform: skewx(0dg) !important; /* IE 9 */
-    transform: skewx(0deg) !important;
-   
-}
-.videoTwoDesc{
-    width: 450px;
-    z-index:3!important;
-   
-    margin-top: 0px;
-    position: relative;
-    bottom:2508px;
-    left:580px;
-}  
 .listDesign {
-    min-width: 350px;
-    max-width: 400px;
+    min-width: 450px;
+    max-width: 950px;
     margin: 0 auto;
     list-style-type: none;
     counter-reset: steps;
     margin: 0;
     font-family: sans-serif;
+    font-size: 20px;
   
   }
   .listDesign li{
     padding: 0 0 20px 50px;
     position: relative;
-    margin: 0;
+    margin-top: 10px;
   }
   .listDesign li:after {
     position: absolute;
@@ -177,9 +92,139 @@
     border: none;
   }
 
+/*------------------------------------------------------------------*/
+.featureBox{
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 550px;
+    margin-top: 30px;
+    /* background: rgb(179, 179, 179); */
+}
+
+.boxRightSide{
+    right: 0px;
+    position: absolute;
+    width: 50%;   
+    height: 100%;
+    /* background-color: rgb(172, 169, 169) !important; */
+}
+
+.boxLeftSide{
+    left: 0px;
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    /* background-color: rgb(161, 159, 159) !important; */
+}
+
+.textBoxRightSide{
+    width: 50%;
+    height: 100%;
+    right: 0;
+    z-index:3!important;
+    position: absolute;
+    /* background: green; */
+}
+
+.textBoxLeftSide{
+    width: 50%;
+    height: 100%;
+    z-index:3!important;
+    position: absolute;
+    /* background: pink; */
+}  
+
+.boxBg{
+    width: 650px;
+    height: 550px;
+    background-color: #1b7cfb1c;
+    border-radius:60px;
+    -ms-transform: skewx(-18dg); /* IE 9 */
+    transform: skewx(-18deg);
+    position: absolute !important;
+    z-index:1 !important; 
+    margin-left: 165px;
+}
+
+.boxImg{
+    height: 100%;
+    padding: 20px;
+    z-index:3 !important;
+    -ms-transform: skewx(0dg) !important; /* IE 9 */
+    transform: skewx(0deg) !important;
+    position: absolute !important;
+    margin-top: 30px;
+    margin-left: 160px;
+}
+
+.diagramImage{
+    width: 700px !important;
+    height: 450px !important;
+    border: 1px solid #1479ff;
+    border-radius: 10px;
+    z-index: 3;
+}
+.diagramImage:hover{
+    width: 720px !important;
+    height: 470px !important;
+    border: 5px solid  #1479ff;
+    border-radius: 10px;
+    cursor: pointer;
+    z-index: 3;
+    
+}
+.imageStyle{
+    width: 700px !important;
+    height: 450px !important;
+    border: 1px solid gray;
+    border-radius: 10px;
+    z-index: 3;
+}
+
+/*------------------------------------------------------------------*/
+@media screen and (max-width: 1700px) {
+    .featureBox{
+        display: block;
+        height: 700px;
+    }
+
+    .textBoxRightSide{
+       height: 100%;
+       width: 100%;
+    }
+
+    .boxRightSide{
+        right: 0;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .featureBox{
+        display: block;
+        height: 550px;
+    }
+
+    .textBoxRightSide{
+        position: relative;
+        width: 100%;
+    }
+
+    .boxRightSide{
+        right: 0;
+        width: 100%;
+    }
+}
+/*------------------------------------------------------------------*/
+.footerContent{
+    margin-top: 30px !important;
+
+    
+}
 .backButton{
     width:15%;
-    font-size: 17px;
+    font-size: 30px;
     margin:20px auto auto auto;
     justify-content: center;
     display: flex;
@@ -192,6 +237,7 @@
 }
 .gitLinkedin{
     width: 100%;
+    font-size: 25px;
     margin:10px auto auto auto;
     justify-content: center;
     display: flex;
