--- a/src/container/FeaturePages/Dashboard/Activities/Activities.module.css
+++ b/src/container/FeaturePages/Dashboard/Activities/Activities.module.css
@@ -9,11 +9,19 @@
     text-align: center;
     margin: 5px 0 5px 0;
 }
-.sectionOne{
+.sectionOne {
+    height: 1580px;
     margin: 8px 0 0 0;
     background-color: white;
     padding: 10px;
     border-radius: 20px;
+    margin-bottom: 20px;
+    overflow-y: scroll;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+.sectionOne::-webkit-scrollbar{
+    display: none;
 }
  .communityActivitiesText{
      background-color: #F7FBFF;
