--- a/src/components/Pages/About/About.module.css
+++ b/src/components/Pages/About/About.module.css
@@ -96,7 +96,8 @@
     display: block;
     position: relative;
     width: 100%;
-    height: 550px;
+    min-height: 600px;
+    height: auto;
     margin-top: 30px;
     /* background: #fff; */
 }
@@ -123,6 +124,7 @@
     right: 0;
     z-index:3!important;
     position: absolute;
+    padding-left: 30px;
     /* background: green; */
 }
 
@@ -181,7 +183,7 @@
     z-index: 3;
 }
 /*------------------------------------------------------------------*/
-/* @media screen and (max-width: 1700px) {
+ @media screen and (max-width: 1000px) {
     .featureBox{
         display: block;
         height: 700px;
@@ -213,7 +215,7 @@
         right: 0;
         width: 100%;
     }
-} */
+} 
 /*------------------------------------------------------------------*/
 .footerContent{
     margin-top: 30px !important;
