--- a/src/container/FeaturePages/Dashboard/Activities/Activities.module.css
+++ b/src/container/FeaturePages/Dashboard/Activities/Activities.module.css
@@ -4,7 +4,8 @@
     font-size: 18px;
     font-weight: 700;
     width: 100%;
-    height: 40px;
+    min-height: 40px;
+    height: auto;
     border-bottom: #dfdfdf solid 1px;
     text-align: center;
     margin: 5px 0 5px 0;
@@ -26,7 +27,9 @@
  .communityActivitiesText{
      background-color: #F7FBFF;
      width: 100%;
-     height: 60px;
+     min-height: 60px;
+     height: auto;
+     overflow: visible;
      margin-bottom: 15px;
      display: flex;
      font-size: 14px;
@@ -35,7 +38,8 @@
      padding:0px 10px 0px 10px;
  }
  .activitiesTextOnly{
-    height: 25px;
+    min-height: 25px;
+    height: auto;
     width: calc(100% - 70px);
     margin: auto;
     text-align: left;
