--- a/src/container/FeaturePages/Dashboard/UserName/UserName.module.css
+++ b/src/container/FeaturePages/Dashboard/UserName/UserName.module.css
@@ -2,7 +2,9 @@
     background:#fff;
     color:black;
     width:100%;
-    height: 150px;
+    min-height: 150px;
+    height: auto;
+    overflow: visible;
     border-radius: 30px;
     display: flex;
     justify-content: space-between;
